--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -215,8 +215,8 @@
               <input type="text" id="customerSearch" placeholder="Search..">
               <div class="section-items">
                 <div class="subsection">
-                  <div class="diagram" id="abcAnalysis_customer_1" style="height: '100%'; width: '100%'">
-                    ABC Analysis of Customers sorted by total Revenue descending
+                  <div class="diagram" id="" style="height: '100%'; width: '100%'">
+                    placeholder
                   </div>
                 </div>
                 <div class="subsection" style="height: 400px;">
@@ -230,9 +230,27 @@
         </div>
         <!--End of section b-->
         <!--End of Revenue section-->
-        <!-- END OF CONTENT-->
       </div>
-
+      <div class="section-items">
+        <div class="subsection" style="
+        margin-bottom: 0px;
+        margin-left: 0px;
+        margin-right: 0px;">
+          <h1>Customer</h1>
+          <input type="text" id="customerSearch" placeholder="Search..">
+          <div class="section-items">
+            <div class="subsection">
+              <div class="diagram" id="abcAnalysis_customer_1" style="height: '100%'; width: '100%'">
+                ABC Analysis of Customers sorted by cumulative customer percentage of total revenue
+              </div>
+            </div>
+            <div class="subsection" style="height: 400px;">
+              <div class="diagram" id="abcAnalysis_customer_2" style="height: '100%'; width: '100%'">
+                ABC Analysis of Customers sorted by total Revenue descending
+              </div>
+            </div>
+          </div>
+          <!-- END OF CONTENT-->
 
       <script>
 
@@ -243,6 +261,7 @@
         heatmap();
         abcAnalysis_pizza_1();
         abcAnalysis_customer_1();
+        abcAnalysis_customer_2();
         pizza_price_popularity();
         //monthlyRevenue();
         function toggleSidebar(turnOff = false) {
