chore: Update store view layout and ABC Analysis sections

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -236,8 +236,8 @@
         margin-bottom: 0px;
         margin-left: 0px;
         margin-right: 0px;">
-          <h1>Customer</h1>
-          <input type="text" id="customerSearch" placeholder="Search..">
+          <h1>ABC Analysis Customer</h1>
+          <input type="text" id="customerSearch" placeholder="Search Customer ID">
           <div class="section-items">
             <div class="subsection">
               <div class="diagram" id="abcAnalysis_customer_1" style="height: '100%'; width: '100%'">
