Fix gauge chart tooltip

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -219,7 +219,7 @@
                     placeholder
                   </div>
                 </div>
-                <div class="subsection" style="height: 400px;">
+                <div class="subsection" style="height: 400px; overflow: visible;">
                   <div class="diagram" id="quality" style="height: '100%'; width: '100%'">
                     Quality
                   </div>
