fix pizza price to popularity size

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -140,7 +140,7 @@
           </div>
           <div class="section-items">
             <div class="subsection">
-              <div id="pizza_price_popularity" class="diagram" style="height: 100%" width="100%">
+              <div id="pizza_price_popularity" class="diagram" style="height: 250px;">
                 Relationship between price and popularity of pizzas
               </div>
             </div>
