chore: Update ABC Analysis of Pizza chart with total sales information

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -114,8 +114,8 @@
           <h1>Pizza</h1>
           <div class="section-items">
             <div class="subsection" style="height: 300px;">
-              <div id="abcAnalysis_pizza_1" class="diagram" style="height: 100%" width="100%">
-                ABC Analysis of Pizza by Cumulative Percentage
+              <div id="abcAnalysis_pizza_2" class="diagram" style="height: 100%" width="100%">
+                ABC Analysis of Pizza by total sales
               </div>
             </div>
             <div class="subsection">
@@ -239,7 +239,7 @@
         gaugeChart();
         pizzaSize();
         heatmap();
-        abcAnalysis_pizza_1();
+        abcAnalysis_pizza_2();
         abcAnalysis_customer_2();
         pizza_price_popularity();
         //monthlyRevenue();
