Adjust gauge chart

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -220,9 +220,8 @@
                   </div>
                 </div>
                 <div class="subsection" style="height: 400px; overflow: visible;">
-                  <div class="diagram" id="quality" style="height: '100%'; width: '100%'">
-                    Quality
-                  </div>
+                  <h2>Customer relationship</h2>
+                  <div class="diagram" id="quality" style="height: '100%'; width: '100%'"></div>
                 </div>
               </div>
             </div>
