Update store view layout and ABC Analysis sections & heatmap gaps reduced

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -216,7 +216,7 @@
               <div class="section-items">
                 <div class="subsection">
                   <div class="diagram" id="abcAnalysis_customer_2" style="height: '100%'; width: '100%'">
-                    ABC Analysis of Customers sorted by total Revenue descending
+                    ABC Analysis of Customers sorted by total Revenue descending <!--sorted by total Revenue descending-->
                   </div>
                 </div>
                 <div class="subsection" style="height: 400px; overflow: visible;">
