chore: Update pizza chart to include store ID in API request

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -144,7 +144,14 @@
                 Relationship between price and popularity of pizzas
               </div>
             </div>
+            
           </div>
+          <div class="section-items">
+          <div class="subsection"style="min-height: 300px;">
+            <h2 class="pizzaPopularityH" data-tooltip="This is the first placeholder section">Pizza Popularity</h2>
+            <div id="pizzaPopularity" class="diagram"style="height: 100%"></div>
+          </div>
+        </div>
         </div>
         <!--End of Pizza section-->
         <!--Forecast section-->
@@ -233,7 +240,7 @@
 
       <script>
 
-
+      pizzaPopularity();
       //statOverview();
         gaugeChart();
         pizzaSize();
