--- a/src/frontend/styles/container.css
+++ b/src/frontend/styles/container.css
@@ -11,7 +11,7 @@
   border-style: solid;
   border-radius: 8px;
   margin: 3px;
-  overflow: hidden;
+  overflow: visible;
   white-space: nowrap;
 }
 
