--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -153,6 +153,13 @@
               margin-right: 0px;">
               <div class="section-items" style="justify-content: space-between;">
                 <div class="btnbox" style="width: 120px;">
+                  <!--
+
+          TODO implement dow to local storage
+          var store = JSON.parse(localStorage.getItem("store"));
+          localStorage.setItem('store', JSON.stringify({ "storeID": params.seriesName }));
+          TODO implement function to change dow
+                  -->
                   <button class="btn" id="">BACK</button>
                   <button class="btn" id="">NEXT</button>
                 </div>
