chore: Update pizza chart to include store ID in API request

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -172,7 +172,7 @@
               <div class="section-items">
                 <div class="subsection">
                   <div id="dailyOrders" class="diagram">
-                    Order Prediction
+                    Average hourly Orders
                   </div>
                 </div>
               </div>
