Change time buttons functionality

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -236,15 +236,7 @@
         <!-- END OF CONTENT-->
 
         <script>
-          pizzaPopularity();
-          gaugeChart();
-          pizzaSize();
-          heatmap();
-          abcAnalysis_pizza_2();
-          abcAnalysis_customer_2();
-          pizza_price_popularity();
-          dailyOrders(); // Funktionsaufruf für Order Prediction
-          pizzaIngredients(); // Funktionsaufruf für Ingredient Prediction
+          mtd();
 
           function toggleSidebar(turnOff = false) {
             if (turnOff) {
