--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -58,7 +58,7 @@
           <div class="section-items">
             <!--PizzaHub-->
             <div class="subsection">
-              <h1>PizzaHub</h1>
+              <h1 id="storeName">PizzaHub</h1>
               <div class="section-items">
                 <div class="statBox">
                   <h2>Sales<h2>
@@ -153,13 +153,6 @@
               margin-right: 0px;">
               <div class="section-items" style="justify-content: space-between;">
                 <div class="btnbox" style="width: 120px;">
-                  <!--
-
-          TODO implement dow to local storage
-          var store = JSON.parse(localStorage.getItem("store"));
-          localStorage.setItem('store', JSON.stringify({ "storeID": params.seriesName }));
-          TODO implement function to change dow
-                  -->
                   <button class="btn" id="" onclick="changeDow(-1);">BACK</button>
                   <button class="btn" id="" onclick="changeDow(1);">NEXT</button>
                 </div>
@@ -239,6 +232,7 @@
           const d = new Date();
           let dow = d.getDay();
           localStorage.setItem('dow', JSON.stringify(dow));
+          document.getElementById('storeName').textContent = JSON.parse(localStorage.getItem("store")).storeID;
 
           mtd();
 
