Grid and diagram names

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -164,16 +164,14 @@
               </div>
               <div class="section-items">
                 <div class="subsection">
-                  <div id="dailyOrders" class="diagram">
-                    Average hourly Orders
-                  </div>
+                  <h2>Average orders per hour</h2>
+                  <div id="dailyOrders" class="diagram"></div>
                 </div>
               </div>
               <div class="section-items">
                 <div class="subsection">
-                  <div id="pizzaIngredients" class="diagram">
-                    Ingredient Prediction
-                  </div>
+                  <h2>Average ingredients used</h2>
+                  <div id="pizzaIngredients" class="diagram"></div>
                 </div>
               </div>
               <div class="section-items">
