chore: Add revenue forecast chart to franchise view

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -173,8 +173,8 @@
 
         <div class="section-items" style="width: 50%;">
           <div class="subsection">
-            <h2>Placeholder</h2>
-            <div class="diagram"></div>
+            <h2>Revenue Forecast</h2>
+            <div id="revenueForecast" class="diagram"></div>
           </div>
           <div class="subsection">
             <!--<h2 data-tooltip="This is the a Map showing all Stores" id="mapTitel">Store locations</h2>-->
@@ -278,6 +278,7 @@
       //statOverview();
 
       pizzaPopularity();
+      revenueForecast();
     </script>
 </body>
 
