--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -144,7 +144,7 @@
         </div>
         <!--End of Pizza section-->
         <!--Forecast section-->
-        <div class="section">
+        <div class="pseudoSection">
           <div class="section-items">
             <div class="subsection" style="
               margin-top: 0px;
@@ -152,8 +152,8 @@
               margin-right: 0px;">
               <div class="section-items" style="justify-content: space-between;">
                 <div class="btnbox" style="width: 120px;">
-                  <button class="btn" id="" onclick="changeDow(-1);">BACK</button>
-                  <button class="btn" id="" onclick="changeDow(1);">NEXT</button>
+                  <button class="btn" id="" onclick="changeDow(-1);" style="z-index: 99;">BACK</button>
+                  <button class="btn" id="" onclick="changeDow(1);" style="z-index: 99;">NEXT</button>
                 </div>
                 <div class="btnbox" style="width: 60px;">
                   <button class="infobox" id="dowInfo">TODAY</button>
