--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -23,8 +23,8 @@
   <script type="text/javascript" src="/static/echarts/echarts.min.js"></script>
   <script type="text/javascript" src="/static/UI/ui.js"></script>
 
-
-  <title>Document</title>
+  <link rel="icon" type="image/x-icon" href="../img/PizzaHub_icon.ico">
+  <title>PizzaHub Dashboard</title>
 </head>
 
 <body>
